(2001/03/12 - broeker) Some minor changes for compiling cscope with DJGPP, the
	               MSDOG port of GCC. Mainly non-availability of some
		       Unix features like CLOSE_ON_EXEC for files, and SIGTSTP.
(2001/03/12 - broeker) Added 'b' flags and O_BINARY bits to all file-opening
                       calls for (potentially) binary data files, to allow 
		       cscope to work on DOS-style platforms. Moved vpopen()
		       and vpfopen() prototypes into vp.h.
(2001/03/12 - broeker) rename 'basename' to 'mybasename' --- avoid XPG4
                       name conflict
(2001/02/12 - duell) man page update for CSCOPE_* information
(2001/02/09 - duell & hull) Support for CSCOPE_EDITOR, CSCOPE_LINEFLAG and
                            CSCOPE_LINEFLAGS_AFTER_FILE
(2001/02/09 - petrs) Updated version number to 15.2b (for beta)
(2001/02/09 - chuck & wilfredo) Darwin support
(2001/01/24 - petrs) Replaced new style C comments, i.e. //
(2000/12/12 - petrs) packages/cscope.spec has now no local directory
(2000/12/12 - petrs) contrib/ocs now checks that cscope is in $PATH
(2000/12/11 - frost) Safety feature in mypopen.c
(2000/11/28 - blank) More FreeBSD support
(2000/11/23 - broeker) Added check for snprintf() to configure.in
(2000/11/22 - petrs) Updated date to cscope.1 man page and retagged the file
(2000/11/22 - petrs) Tagged cvs tree as v15_1
(2000/11/21 - petrs) Added UnixWare 7 packaging scripts
(2000/11/20 - petrs) 15.1 version name, man page update, README update
(2000/10/09 - atrn) better FreeBSD support
(2000/10/02 - fritsch) better BeOS support
(2000/10/02 - salz) -i now accepts '-' for a list of files from stdio
(2000/09/19 - brent) fixed -R to handle similarly named files
(2000/05/31 - mascott) ncurses.h gets picked up correctly for FreeBSD
(2000/05/18 - hops) display errors via varargs posterr(ap, ..)
                    start changing sprintfs to snprintfs
                    buildonly not go into curses - set linemode 